# PyLWE

./: .gitignore  LICENSE  README.md  pyproject.toml
sample/: 01_parse_nmea_and_ais.py  02_generate_lwe_packet.py  03_udp_receiver_example.py
src/pylwe/: __init__.py  exceptions.py  generator.py  parser.py  types.py
tests/: test_generator.py  test_parser.py
